@@ -1,3 +1,5 @@
+3/1/12 #3204, reuse enums from phetcommon and game packages
+3/1/12 #3204, add sim-sharing message for "game aborted"
 # 1.03.01 (61866) Feb 28, 2012
 2/28/12 #3204, first dev version with data-collection feature
 2/27/12 #3204, add study version to build.properties file
